--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,8 @@
   <title>Andrew Lo</title>
   <script src="https://kit.fontawesome.com/6b70c3be0e.js" crossorigin="anonymous"></script>
   <script src="main.js" defer></script>
+  <link rel="stylesheet"
+    href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="preload" href="./styles.css" as="style" onload="this.rel='stylesheet'">
