--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="twitter:card" content="summary" />
-  <meta property="og:title" content="Fireflies" />
+  <meta property="og:title" content="Andrew Lo" />
   <meta property="og:description" content="Hello there! My name is Andrew Lo and I am a software engineer. This is my portfolio!" />
-  <meta property="og:image" content="/images/coffeekid.png" />
+  <meta property="og:image" content="./images/coffeekid.jpg" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" />
   <title>Andrew Lo, Software Engineer Portfolio</title>
